--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -13,45 +13,26 @@
 <section class="py-5 bg-light">
     <div class="container px-5 my-5">
         <div class="text-center">
-            <h2 class="fw-bolder">How to reach me</h2>
+            <h2 class="fw-bolder">Contact <strong>Farid Rafya</strong></h2>
             <br><br>
         </div>
-        <div class="row gx-5 row-cols-1 row-cols-sm-2 row-cols-xl-4 justify-content-center">
-            <div class="col mb-5 mb-5 mb-xl-0 d-flex align-items-center">
-                <div class="text-center ">
-                    <img class="img-fluid rounded-circle mb-4 px-4"
-                         src="https://skript.cn/images/github.png"
-                         alt="..."/>
-                    <a class="h5 fw-bolder text-decoration-none link-dark"
-                       href="https://github.com/FaridRafya">GitHub</a>
-                </div>
+        <div class="row gx-5 justify-content-center align-items-center">
+            <!-- GitHub Section -->
+            <div class="col-md-4 mb-4 text-center">
+                <img class="img-fluid rounded-circle mb-3"
+                     src="https://skript.cn/images/github.png"
+                     alt="GitHub Logo" style="width: 100px; height: 100px;"/>
+                <a class="h4 fw-bold text-decoration-none link-dark"
+                   href="https://github.com/FaridRafya">GitHub</a>
             </div>
-            <div class="col mb-5 mb-5 mb-xl-0 d-flex align-items-center">
-                <div class="text-center">
-                    <img class="img-fluid rounded-circle mb-4 px-4"
-                         src="https://th.bing.com/th/id/R.42453455fe5a3b91aff187f8ad7738ab?rik=NOM%2bPBtmgcDm%2bw&pid=ImgRaw&r=0"
-                         alt="..."/>
-                    <a class="h5 fw-bolder text-decoration-none link-dark"
-                       href="https://www.linkedin.com/in/timur-turianytsia-50a71825a/">LinkedIn</a>
-                </div>
-            </div>
-            <div class="col mb-5 mb-5 mb-xl-0 d-flex align-items-center">
-                <div class="text-center">
-                    <img class="img-fluid rounded-circle mb-4 px-4"
-                         src="https://th.bing.com/th/id/R.5e04fd779e7607a47d0bad14976caa90?rik=MYieavaZpaXrMw&riu=http%3a%2f%2f1000logos.net%2fwp-content%2fuploads%2f2017%2f02%2fNew-Instagram-logo.jpg&ehk=kTNHOU7RNhSBC8VTl4FPXOmyjXgyJlrNtPiZ9qk03fA%3d&risl=&pid=ImgRaw&r=0"
-                         alt="..."/>
-                    <a class="h5 fw-bolder text-decoration-none link-dark"
-                       href="https://www.instagram.com/2.taru">Instagram</a>
-                </div>
-            </div>
-            <div class="col mb-5 mb-5 mb-xl-0 d-flex align-items-center">
-                <div class="text-center">
-                    <img class="img-fluid rounded-circle mb-4 px-4"
-                         src="https://uploads-ssl.webflow.com/61a539be2729708d89c426d8/61ef16f903254c310d3ad9c0_Yahoo.png"
-                         alt="..."/>
-                    <a class="h5 fw-bolder text-decoration-none link-dark"
-                       href="https://mail.google.com/mail/u/?authuser=turianytsia.timur@gmail.com">Gmail</a>
-                </div>
+
+            <!-- Gmail Section -->
+            <div class="col-md-4 mb-4 text-center">
+                <img class="img-fluid rounded-circle mb-3"
+                     src="https://uploads-ssl.webflow.com/61a539be2729708d89c426d8/61ef16f903254c310d3ad9c0_Yahoo.png"
+                     alt="Gmail Logo" style="width: 100px; height: 100px;"/>
+                <a class="h4 fw-bold text-decoration-none link-dark"
+                   href="mailto:turianytsia.timur@gmail.com">Gmail</a>
             </div>
         </div>
         <br>
